# mirai_bot_r

./: .env  .gitignore  Cargo.toml  README.md  ainingning.py  aitaffy.py
.github/workflows/: rust.yml
data/: catgirl.json  catgirl_1.json  catgirl_2.json  cxg.json
src/: lib.rs  main.rs
src/api/: aitaffy.rs  api_utils.rs  baidu_api.rs  baidu_ocr.rs  bilibili.rs  bot.rs  bot_trait.rs  chatgpt.rs  conf.rs  gpt_chat.rs  magic.rs  mod.rs  web_tools.rs  web_utils.rs  wx_chat.rs
src/bot/: api_utils.rs  bot_action_impl.rs  bot_trait.rs  custom_impl.rs  event.rs  event_handler_impl.rs  group.rs  group_admin_impl.rs  message.rs  mod.rs  my_bot.rs  summary_msg.rs
src/database/: mysql.rs
src/setup/: conf.rs  logger.rs
