[package]
name = "mirai_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4"
rand = "*"
regex = "1.9.6"

# 异步、分布式调试工具
# tracing = "0.1"

# once_cell = "1.13.0"
# 数据库依赖
# mysql = "24.0.0"
# 处理数据库时间
# chrono = "0.4.31"
utf8_slice = "1.0.0"

# tokio (no TLS)
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio",
    "time",
    "json",
] }

dotenvy = "0.15.7"

chatgpt_rs = "1.2.3"
once_cell = "1.18.0"

async-trait = "0.1.74"
# diesel = { version = "2.1.3", features = ["mysql"] }
